--- a/.platform/httpd/conf.d/ssl_rewrite.conf
+++ b/.platform/httpd/conf.d/ssl_rewrite.conf
@@ -1,8 +1,8 @@
 RewriteEngine On
 
-# Redirect demoteamzuoz.ch to www.demoteamzuoz.ch
-RewriteCond %{HTTP_HOST} ^demoteamzuoz\.ch$ [NC]
-RewriteRule ^(.*)$ https://www.demoteamzuoz.ch/$1 [R=301,L]
+# Redirect www.effekte.ch to effekte.ch
+RewriteCond %{HTTP_HOST} ^www\.demoteamzuoz\.ch$ [NC]
+RewriteRule ^(.*)$ https://demoteamzuoz.ch/$1 [R=301,L]
 
 <If "-n '%{HTTP:X-Forwarded-Proto}' && %{HTTP:X-Forwarded-Proto} != 'https'">
     RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
